k8s/loan-service/db/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: loan-service-db-svc
  labels:
    app: loan-service
spec:
  ports:
  - port: 3306
    name: mysql-default
  clusterIP: None # headless
  selector:
    app: loan-service
    role: db
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loan-service-db-ss
  labels:
    app: loan-service
spec:
  selector:
    matchLabels:
      app: loan-service
  serviceName: loan-service-db-svc
  replicas: 1 # default
  minReadySeconds: 10 # default is 0
  template:
    metadata:
      labels:
        app: loan-service
        role: db 
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql
        image: mysql:9.2
        ports:
        - containerPort: 3306
          name: mysql-default
        volumeMounts:
        - name: loan-service-db-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: loan-service-db-data
    spec:
      accessModes:
      - ReadWriteOncePod
      storageClassName: "local-storage"
      resources:
        requests:
          storage: 1Gi
