k8s/loan-service/db/db.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loan-service-db-networkpolicy
  labels:
    app: loan-service
spec:
  podSelector:
    matchLabels:
      app: loan-service
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: loan-service
          role: server
    ports:
    - protocol: TCP
      port: 3306
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: loan-service
          role: server
